--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 crypto.names.base-url=https://apiv2.bitcoinaverage.com/info/indices/names/
+public.apis.base-url=https://api.publicapis.org/entries
 server.servlet.context-path=/api/v1
 server.port=8091
 
