--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
 crypto.names.base-url=https://apiv2.bitcoinaverage.com/info/indices/names/
 public.apis.base-url=https://api.publicapis.org/entries
+placeholder.apis.base-url=https://jsonplaceholder.typicode.com/todos/
+reqbin.apis.base-url=https://reqbin.com/echo/post/json
 server.servlet.context-path=/api/v1
 server.port=8091
 
